--- a/md2html/templates/layout_report.html
+++ b/md2html/templates/layout_report.html
@@ -129,9 +129,11 @@
             font-size: 24px;
         }
 
-        .toc ul {
+        .toc ul,
+        .toc ol {
             list-style: none;
             padding: 0;
+            margin: 0;
         }
 
         .toc li {
@@ -302,11 +304,14 @@
                 page-break-before: auto;
             }
 
-            pre,
             img,
             table,
             .mermaid {
                 page-break-inside: avoid;
+            }
+
+            pre {
+                page-break-inside: auto;
             }
         }
     </style>
@@ -358,7 +363,7 @@
                 <h2>📋 목차</h2>
                 <ul>
                     {{range $i, $s := .Sections}}
-                    <li><a href="#{{$s.ID}}">{{inc $i}}. {{$s.Title}}</a></li>
+                    <li><a href="#{{$s.ID}}">{{$s.Title}}</a></li>
                     {{end}}
                 </ul>
             </div>
