--- a/md2html_v2/templates/layout_report.html
+++ b/md2html_v2/templates/layout_report.html
@@ -812,10 +812,13 @@
     <div class="document-container">
         <!-- Cover -->
         <div class="cover-page">
-            <div class="manual-badge">{{if .Subtitle}}{{.Subtitle}}{{else}}User Manual{{end}}</div>
+            <div class="manual-badge">{{if .Header}}{{.Header}}{{else}}User Manual{{end}}</div>
 
             <div class="main-content">
                 <div class="title">{{.Title}}</div>
+                {{if .Subtitle}}
+                <div class="subtitle">{{.Subtitle}}</div>
+                {{end}}
                 <div class="version">Version {{.Version}}</div>
             </div>
 
